# nogha_plex_tools

./: .env.example  .gitignore  README.md  edit_tracks_properties.py  extract_episode_artwork.py  extract_subtitles.py  load_episode_data.py  pyproject.toml  remux_files.py  rename_files.py  requirements.txt  save_episode_data.py  verify_files.py
.old/: README.md  load_episode_data.py  save_episode_data.py
.old/utils/: plex_server_utilities.py
src/plex_tools/: __init__.py  __main__.py
src/plex_tools/cli/: main.py
src/plex_tools/cli/commands/: greet.py  rename.py
src/plex_tools/operations/: __init__.py  plex_server_utilities.py
utils/: file_management_helpers.py  plex_server_utilities.py  prompt_helpers.py
